# TaylorGAN

./: .env.sample  pyproject.toml  setup.cfg
datasets/: corpus.yaml  en_fasttext_word2vec_V100D20.json
src/: configs.py
src/core/: MLE.py  cache.py  losses.py  main.py
src/core/GAN/: __init__.py  __main__.py  _discriminator.py  _loss.py  _trainer.py  _trainer_factory.py  discriminators.py  loss.py  trainer.py
src/core/GAN/tests/: test_loss.py
src/core/evaluate/: __init__.py  bleu.py  evaluate_text.py  generator_executor.py  perplexity.py
src/core/models/: __init__.py  _factory.py  _generator.py  discriminators.py  generators.py  interfaces.py  sequence_modeling.py
src/core/objectives/: MLE.py  __init__.py  collections.py  regularizers.py
src/core/objectives/GAN/: __init__.py  base.py  discrete.py
src/core/objectives/regularizers/: __init__.py  base.py  regularizers.py  variable_regularizers.py
src/core/preprocess/: __init__.py  _adaptors.py  _config_objects.py  _configs.py  _ops.py  _preprocessors.py  _segmentor.py  adaptors.py  config_objects.py  preprocessors.py  record_objects.py  tokenizers.py
src/core/preprocess/tests/: conftest.py  test_adaptors.py  test_config_objects.py  test_preprocessors.py  test_tokenizers.py
src/core/train/: __init__.py  __main__.py  _callback_factory.py  _fit_loop.py  _pubsub.py  _trainer.py  _trainer_factory.py  fit_loop.py  loggers.py  optimizer.py  pubsub.py  pubsub_base.py  trainers.py  updaters.py
src/core/train/callbacks/: __init__.py  base.py  callback_list.py  channels.py  evaluator.py  model_checkpoint.py  progbar_logger.py  tensorboardx_writer.py  train_profiler.py
src/evaluate/: evaluate_text.py  fed.py  generator_executor.py  perplexity.py
src/evaluate/tests/: test_bleu.py
src/factories/: __init__.py  callback_factory.py  data_factory.py  generator_factory.py  trainer_factory.py  utils.py
src/factories/callback_factory/: callback_factory.py  evaluator_creator.py
src/factories/modules/: discriminator.py  generator.py
src/factories/trainer_factory/: GAN.py  MLE.py  trainer_factory.py
src/preprocess/: __init__.py  _configs.py  _factory.py
src/preprocess/tests/: test_preprocessors.py
src/scripts/: _configs.py  evaluate_text.py  generate_text.py  parsers.py  perplexity.py  restore_from_checkpoint.py  snippets.py  train.py
src/scripts/evaluate/: evaluate_text.py  generate_text.py  perplexity.py
src/scripts/parsers/: __init__.py
src/scripts/train/: GAN.py  MLE.py  restore_from_checkpoint.py  train.py
tests/: test_scripts.py
