[tool.poetry]
name = "taylorgan"
version = "0.1.0"
description = "Source code of our NeurIPS 2020 poster paper TaylorGAN: Neighbor-Augmented Policy Update Towards Sample-Efficient Natural Language Generation"
authors = ["noobOriented <jsaon92@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "*"
more-itertools = "*"
tensorboardx = "*"
tensorflow = "1.13.1"
tensorflow-hub = "0.7.0"
tqdm = "^4.40.0"
u-msgpack-python = "*"
pyyaml = "*"
flexparse = { git = "https://github.com/noobOriented/flexparse.git", branch = "main" }
torch = "^1.7.1"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = ">=0.17"
ipdb = "*"
pytest = "*"
pytest-cov = "*"
pytest-dependency = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
