[tool.poetry]
name = "taylorgan"
version = "0.1.0"
description = "Source code of our NeurIPS 2020 poster paper TaylorGAN: Neighbor-Augmented Policy Update Towards Sample-Efficient Natural Language Generation"
authors = ["noobOriented <jsaon92@gmail.com>"]
packages = [
    { from = "src", include = "**/*.py" }
]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "*"
more-itertools = "*"
tensorboardx = "*"
pyyaml = "*"
torch = "^2.0.0"
pydantic = "^2.10.2"
rich = "^13.9.4"

tensorflow = { version = "^1.13.1", optional = true }
tensorflow-hub = { version = "^0.7.0", optional = true }

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = ">=0.17"
ipdb = "*"
pytest = "*"
pytest-cov = "*"
pytest-dependency = "*"

[tool.poetry.extras]
tensorflow = ["tensorflow", "tensorflow-hub"]

[tool.poetry.scripts]
GAN = "core.GAN.__main__:main"
MLE = "core.MLE:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
